# iot-security-challenge

./: .gitignore  ESP32.md  LICENSE  README.md  brick.py  brick_main.txt  devenv.nix  dns_amp.py  dns_amp_solved.py  firmware_compressed.py  flash.cmds  flash_lab.cmds  private_key.txt  pyproject.toml  reset.txt  setup_devenv.sh
backup_alice/: adminhack.txt  adminpw.txt  ap.py  fw_meta.py  fw_serve.py  main.py  microWebSocket.py  microWebSrv.py  ota.py  ota_firmware.json  ota_firmware.py  public_key.txt  reset.py  the_flag_is_YouW00n_CongratZ_123  webserver.py
labs/: main.py
src/: hello_world.py  main.py
src_encrypted/: 3xa9rm09IXdqi_oUezoEMg  DXDbzgj7iCX714VgLU10lNGVNRrsq9FdpVaT6yiPJUg  DXtcijiXkmkHH6mRVTtueQ  Dc7CdRVU5BXPjKEbE6qzdQ  LeZVmc9knjP4aLno0EVMKQ  M7sSE6T0zSH4AQ03Q4Zs8w  ONgN_icY5PBwGM5c5fWArA  T5qg14HCjHMB63ssYHczxf_Td2APWdpYN646z8LOGzw  TxF4x47zKzoLVRCaAzlOPA  U7uECfdzHcON7TCy-uPfGQ  YIApfQIkfL-FfwbSOA7fKw  fXI9z93J0LdtgtrCQkWYOQ  gocryptfs.conf  gocryptfs.diriv  guEXtxrbl6DadRokcuv0Ng  gyHXWJsN4a0y5jQxS-bwYw  m3naeA-NojQkLJqEJkPjFg  ox2Zkrb_kY1KoSfZaSVYXQ  wfIEuUt17ufbOsbT3UIv82m1hjAso2g78w051ajqOJA  wm2E0KPgDE83puEc3_RpTwOCI2Lj8whrt4VrQoyZJihb0KS19d8aAXSMab1Odr8q  wtBORfvRTxnan_pqr7xbDg
src_mal/: 6dBXC8zC2LWgVuuYUF-6CA  7KuMWONblYQ7xByt-uf-Xw  GwtDH515p_8FqtFVlBBUFQ  KbBQNwyj2tiQmLtL8Zc83Q  L_YWpxAusBCQSxF1xMie_Q  MG5WNd_AEld-A_hjHGXReJEN6qq3LuAJCFxDqIMy7FA  Pu2AAUkvw3cHQTNZaS0Qrw  X2QlYe-3taGXg88bl-Q5ug  YIvrgfL1K7V7PJx0J1zBWQ  g88dWUAKYx9BM6jfbbt10A  gBllszwhH_TTt-IKAa1L3w  gocryptfs.conf  gocryptfs.diriv  kueo_FbCF42BRAC2JEhEVZI0D93cCLOuUSvfFqAIpwk  (+5 more)
(+31 files in other folders)
