[tool.poetry]
name = "iotsecurity"
version = "0.1.0"
description = ""
authors = ["Ente <ducksource@duckpond.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
freezefs = "^2.4"
scapy = "^2.5.0"
micropython-esp32-stubs = "^1.23.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
